# boringssl_tls_for_python

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README.txt  build.sh  build_boringssl.bat  build_boringssl.sh  build_windows.bat  requirements.txt  setup.py
.github/workflows/: build.yml
configs/: chrome_120_desktop.json
docs/: USAGE.md  browserleaks_results.json  evaluation_results.json  evaluation_results.md  evaluation_results_full.json
docs/评估/: pinggu.md  pinggu_1.md  审核报告.md
include/tls_fingerprint/: boringssl_socket.h  tls_fingerprint_config.h  tls_fingerprint_generator.h
python/: MANIFEST.in  README.md  USAGE.md  pyproject.toml  setup.py
python/include/tls_fingerprint/: boringssl_socket.h
python/src/: boringssl_socket.cc  tls_fingerprint_config.cc
python/tls_fingerprint/: __init__.py  _bindings.cc  client.py  http2_fingerprint.py  pure_python.py  session.py
shell/: create_tag.sh
src/: boringssl_socket.cc  tls_fingerprint_config.cc  tls_fingerprint_generator.cc
tests/: CMakeLists.txt
tests/cls/: tls指纹工具请求.txt  浏览器工具请求.txt
tests/cpp/: tls_fingerprint_test.cpp
tests/python/: test_tls_fingerprint.py  tls_full_test.py  tls_leaks_test.py  tls_proxy_test.py  tripflow_redirect_tls_fingerprint.py
